# full-text-search

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.json
client/: Makefile  go.mod  main.go
client/cmd/: main.go
client/searcher/: searcher.go
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: app.hpp  bookindexer.cpp  booksearcher.cpp  main.c  main.cpp
src/libfts/sum/: CMakeLists.txt
src/libfts/sum/sum/: sum.cpp  sum.test.cpp
src/libindex/: CMakeLists.txt
src/libindex/libindex/: index.cpp  index.hpp  index.test.cpp
src/libindexaccessor/: CMakeLists.txt
src/libindexaccessor/libindexaccessor/: index_accessor.cpp  index_accessor.hpp  index_accessor.test.cpp
src/libparser/: CMakeLists.txt
src/libparser/libparser/: parser.cpp  parser.hpp  parser.test.cpp
src/libsearcher/: CMakeLists.txt
src/libsearcher-c/: CMakeLists.txt
src/libsearcher-c/libsearcher-c/: searcher-c.cpp  searcher-c.h
src/libsearcher/libsearcher/: searcher.cpp  searcher.hpp  searcher.test.cpp
src/libsum/: CMakeLists.txt
src/libsum/libsum/: sum.cpp  sum.hpp  sum.test.cpp
